# DRIFT-Net

./: README.md  pyproject.toml
configs/: kf2d.yaml  nsbb.yaml  nspwc.yaml  nssl.yaml  nssvs.yaml
driftnet/: inference.py  metrics.py  model.py  train.py  trainer.py  utils.py
driftnet/problems/elliptic/: helmholtz.py  poisson.py
driftnet/problems/fluids/: compressible.py  incompressible.py
driftnet/problems/reaction_diffusion/: allen_cahn.py
driftnet/problems/wave/: acoustic.py
