[project]
name = "driftnet"
version = "1.0.0"
description = "DRIFT-Net: a dual-branch spectral–spatial neural operator for PDE forecasting"
dependencies = [
    "torch == 2.0.1",
    "torchvision == 0.15.2",
    "numpy",
    "transformers == 4.29.2",
    "matplotlib",
    "accelerate == 0.31.0",
    "wandb == 0.14.2",
    "h5py",
    "pandas",
    "pyyaml",
]

[build-system]
build-backend = "flit_core.buildapi"
requires = ["flit_core >=3.2,<4"]
